<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="15dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <group

        android:checkableBehavior="single">

        <item
            android:id="@+id/InicioAdmin"
            android:title="@string/InicioAdmin"
            android:icon="@drawable/ic_stat_name"
            />

        <item
            android:id="@+id/PerfilAdmin"
            android:title="@string/PerfilAdmin"
            android:icon="@drawable/ic_stat_name"/>

        <item
            android:id="@+id/RegistrarAdmin"
            android:title="@string/RegistrarAdmin"
            android:icon="@drawable/ic_stat_name"/>

        <item
            android:id="@+id/ListarAdmin"
            android:title="@string/ListarAdmin"/>

        <item
            android:id="@+id/Salir"
            android:title="@string/Salir"/>

</group>



</menu>


